# LearnLab

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
POC/: blogger.py  post.md  pyproject.toml  tweet.py
POC/Agentic_Chunker/: AWS_utils.py  agentic_chunker.py  parser.py  propositions.py
POC/podcast-agent-poc/: agent_prototype_1.py  agent_protoype_2.py  rag_app.py  rag_app_truncate.py  retreiving.py  semantic-splitter.py
airflow/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
airflow/dags/: pdf_processing_dag.py
airflow/dags/tasks/: task1_initialize.py  task2_scan.py  task3_process.py  task4_embeddings.py  task5_upload.py
airflow/scripts/: pdf_processor.py  s3_helper.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/agents/: base.py  langgraph.json  states.py
backend/agents/podcast_agent/: learn_lab_assistant_agent.py
backend/agents/podcast_agent/archive/: podcast_agent.py  podcast_agent_aws_save.py  podcast_agent_cacheing.py  podcast_agent_groq.py  test_podcast.py
backend/agents/tools/: __init__.py  web.py
backend/agents/utils/: blog_agent.py  flashcard_agent.py  pdf_processor.py  podcast_s3_storage.py  qna_agent.py  rag_application.py  tweet_agent.py  upstash_cache.py
backend/agents/utils/upstash_semantic_cache/: __init__.py  semantic_cache.py
backend/app/: .env.example  __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  files.py  flashcards.py  sample_data.py  social.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  health_check.py  logger.py  security.py
backend/app/models/: __init__.py  file.py  flashcard.py  user.py  user_session.py
backend/app/models/podcast/: __init__.py  analytics.py  podcast.py  progress.py
backend/app/models/quiz/: __init__.py  attempt.py  question.py  quiz.py
backend/app/schemas/: __init__.py  file.py  flashcard.py  social_schema.py  user.py
backend/app/schemas/chat/: models.py
backend/app/schemas/generate/: models.py
backend/app/schemas/podcast/: __init__.py  analytics.py  podcast.py  progress.py
backend/app/schemas/quiz/: __init__.py  analytics.py  attempt.py  question.py  quiz.py
backend/app/services/: __init__.py  notification_service.py  s3.py  social_service.py
backend/app/services/flashcard_service/: __init__.py  analytics_service.py  base_service.py  card_service.py  deck_service.py  review_service.py
backend/app/services/podcast_service/: __init__.py  analytics.py  audio.py  config.py  progress.py  s3.py  transcript.py  utils.py
backend/app/services/quiz_service/: __init__.py  analytics_service.py  attempt_service.py  question_service.py  quiz_service.py
backend/app/services/sample_data_service/: __init__.py  service.py
backend/app/tests/: test_flashcards.py
backend/app/utils/: X.py  blogger.py  flashcard_utils.py
backend/sample_data/quiz/: 07_question_responses.sql
backend/tests/: test_main.py
frontend/: .env.example  (+9 more)
(+93 files in other folders)
